# lektor

./: .appveyor.yml  .codecov.yml  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGES  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  build_frontend.py  hatch_build.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: check_js_skip.sh  check_py_skip.sh  check_python_skip.sh  check_skip.sh  skip.sh
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  js_tests.yml  publish.yml  py_tests.yml
chocolatey/: ReadMe.md  _TODO.txt  lektor.3.2.0.nupkg  lektor.nuspec
chocolatey/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1  installer.py
docs/: Website.lektorproject
docs/configs/: markdown-highlighter.ini
docs/content/: contents.lr
docs/content/api/: contents.lr
docs/content/cli/: contents.lr
docs/content/content/: contents.lr
docs/content/deployment/: contents.lr
docs/content/guides/: contents.lr
docs/content/installation/: contents.lr
docs/content/models/: contents.lr
docs/content/plugins/: contents.lr
docs/content/project/: contents.lr
docs/content/quickstart/: contents.lr
docs/content/search/: contents.lr
docs/content/templates/: contents.lr
docs/content/themes/: contents.lr
docs/content/what/: contents.lr
docs/models/: doc-page.ini  redirect.ini
docs/templates/: doc-page.html  layout.html  redirect.html
docs/templates/macros/: docs.html
docs/webpack/: package.json  webpack.config.js
docs/webpack/js/: app.js
docs/webpack/scss/: main.scss
example/: Example.lektorproject
example/assets/static/: style.css
example/configs/: markdown-highlighter.ini
example/content/: contents+de.lr  contents+fr.lr  contents.lr
example/content/404.html/: contents.lr
example/content/about/: contents.lr
example/content/blog/: contents.lr
example/content/plugin-use/: contents.lr
example/content/project-categories/: contents.lr
example/content/projects/: contents.lr
example/content/types/: contents.lr
example/flowblocks/: text.ini  text_and_html.ini
example/models/: attachment.ini  blog.ini  page.ini  project-categories.ini  project-category.ini  project.ini  projects.ini  types.ini
example/templates/: blog-post.html  blog.html  layout.html  page.html  project-categories.html  project-category.html  project.html  projects.html  types.html
example/templates/blocks/: text.html  text_and_html.html
example/templates/macros/: blog.html  pagination.html  projects.html
example/themes/: README.md
frontend/: .eslintrc.js  build.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/js/: error-dialog.ts  events.ts  fetch.ts  globals.d.ts  i18n.test.ts  i18n.tsx  main.tsx  shortcut-keys.ts  slugify.test.ts  slugify.ts  userLabel.tsx  utils.test.ts  utils.ts  widgets.test.ts  widgets.tsx
frontend/scss/: bootstrap-overrides.scss  forms.scss  main.scss  static-pages.scss  variables.scss
frontend/tooldrawer/: index.ts  livereload-worker.ts  tsconfig.json
gui/: Makefile  dmg-config.json  package.json
gui/resources/: Lektor-Info.plist  lektor  lektor-mac-proxy  setup.py.patch  sitecustomize.py
gui/static/: index.html  webpack.config.js
lektor/: __main__.py  _compat.py  assets.py  build_programs.py  builder.py  buildfailures.py  cli.py  cli_utils.py  compat.py  constants.py  context.py  databags.py  datamodel.py  db.py  devcli.py  devserver.py  editor.py  environment.py  exception.py  filecontents.py  i18n.py  imagetools.py  inifile.py  markdown.py  metaformat.py  packages.py  pagination.py  pluginsystem.py  project.py  publisher.py  quickstart.py  reporter.py  sourceobj.py  sourcesearch.py  typing.py  uilink.py  utils.py  vfs.py  videotools.py  watcher.py
lektor/admin/: .babelrc  .eslintrc.js  __init__.py  babel-require.js  common.py  context.py  models.py  package-lock.json  package.json  tsconfig.json  utils.py  webui.py
lektor/environment/: __init__.py  config.py  expressions.py
lektor/imagetools/: __init__.py  _compat.py  exif.py  image_info.py  thumbnail.py
lektor/markdown/: __init__.py  controller.py  mistune0.py  mistune2.py  mistune3.py
lektor/translations/: ca.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json  zh_tw.json
lektor/types/: __init__.py  base.py  fake.py  flow.py  formats.py  multi.py  primitives.py  special.py
lektor/typing/: compat.py  db.py
stubs/: inifile.pyi  mistune.pyi
stubs/watchdog/: events.pyi
tests/: conftest.py  markers.py  secure.lektorproject  test_api.py  test_assets.py  test_build_frontend.py  test_build_sites.py  test_builder.py  test_buildfailures.py  test_cli.py  test_cli_utils.py  test_compat.py  test_config.py  test_conftest.py  test_databag.py  test_datamodel.py  test_db.py  test_dependencies.py  test_deploy.py  test_dev_cli.py  test_devcli.py  test_devserver.py  test_editor.py  test_environment.py  test_filecontents.py  test_i18n.py  test_images.py  test_imagetools.py  test_imports.py  test_integration.py  test_issue_410.py  test_markdown.py  test_packages.py  test_pagination.py  test_plugins.py  test_pluginsystem.py  test_prev_next_sibling.py  test_preview.py  test_project.py  test_publisher.py  (+14 more)
tests/admin/: test_api.py  test_dash.py  test_serve.py  test_webui.py
tests/always-build-option-project/: Website.lektorproject
tests/child-sources-test-project/: Website.lektorproject
tests/databag-project/: test.lektorproject
tests/demo-project/: Website.lektorproject
tests/dependency-test-project/: Website.lektorproject
tests/imagetools/: test_exif.py  test_image_info.py  test_imagetools.py  test_thumbnail.py
tests/pep660-dummy-plugin/: lektor_dummy_plugin.py  pyproject.toml
tests/setup_py-dummy-plugin/: lektor_dummy_plugin.py  setup.py
tests/ünicöde-project/: test.lektorproject
(+661 files in other folders)
