[metadata]
name = Lektor
description = A static content management system.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
platforms = any
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
url = http://github.com/lektor/lektor/
classifiers =
    Framework :: Lektor
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
requires = setuptools_scm

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    Babel
    click>=6.0
    EXIFRead
    filetype>=1.0.7
    Flask
    inifile
    Jinja2>=3.0
    mistune>=0.7.0,<2
    pip
    python-slugify
    requests[security]
    setuptools
    watchdog
    Werkzeug<3
setup_requires =
    # XXX: b/c: This duplicates config in pyproject.toml and is only
    # used when running the stub setup.py directly
    setuptools >= 45
    setuptools_scm >= 6

[options.extras_require]
ipython =
    ipython
# XXX: the [test] extras is deprecated
# Ref: https://github.com/lektor/lektor/pull/931#issuecomment-911879538
test =
    pre-commit
    pylint==2.7.0
    pytest
    pytest-cov
    pytest-mock
    pytest-click

[options.entry_points]
console_scripts = 
    lektor = lektor.cli:main

[flake8]
ignore=E203,F403,E128,E126,E123,E121,E265,E501,N802,N803,N806,C901,D100,D102,D102,D10,W503,E731,E402,E741
