[metadata]
name = Lektor
description = A static content management system.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
platforms = any
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
url = https://www.getlektor.com/
project_urls =
    Homepage = https://www.getlektor.com/
    Source = https://github.com/lektor/lektor/
    Documentation = https://www.getlektor.com/docs/
    Changelog = https://github.com/lektor/lektor/blob/master/CHANGES.md
classifiers =
    Framework :: Lektor
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    Babel
    build
    click>=6.0
    deprecated
    EXIFRead
    filetype>=1.0.7
    Flask
    importlib_metadata; python_version<"3.8"
    inifile>=0.4.1
    Jinja2>=3.0
    MarkupSafe
    marshmallow
    marshmallow_dataclass>=8.5.9
    mistune>=0.7.0,<3
    pip
    python-slugify
    pytz
    requests
    watchdog
    Werkzeug>=2.1.0,<3

[options.extras_require]
ipython =
    ipython
    traitlets

[options.entry_points]
console_scripts = 
    lektor = lektor.cli:main
